# PiPyADC

./: .gitattributes  .gitignore  ADS1256_default_config.py  ADS1256_definitions.py  MANIFEST.in  README.md  bench_config.py  benchmark.py  device2_config.py  editable_user_install_workaround.txt  example.py  example_2.py  example_2_devices.py  pipyadc.py  pyproject.toml  setup.cfg  setup.py  test.py  test2.py  test2_config.py  test_config.py  versioneer.py
examples/: bench_config.py  benchmark.py  example.py  example_2.py
examples/benchmark/: bench_config.py  benchmark.py
examples/two_devices_example/: device1_config.py  device2_config.py  example_2_devices.py
examples/waveshare_board/: waveshare_config.py  waveshare_example.py
pipyadc/: ADS1256_default_config.py  __init__.py  _version.py  pipyadc.py
pipyadc/utils/: __init__.py  text_screen.py
