[metadata]
name = pipyadc
description = Python module for interfacing Texas Instruments SPI bus based analog- to-digital converters with the Raspberry Pi
url = https://github.com/bleykauf/PiPyADC
author = Ulrich Lukas
maintainer = Ulrich Lukas
maintainer_email = ul-gh@datenparkplatz.de
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux

[options]
python_requires = >= 2.7
setup_requires =
    setuptools >= 38.3.0
install_requires = 
    wiringpi
packages = find:


[versioneer]
VCS = git
style = pep440
versionfile_source = pipyadc/_version.py
versionfile_build = pipyadc/_version.py
tag_prefix =
parentdir_prefix = pipyadc-
