[metadata]
name = pipyadc
description = Python package for interfacing Texas Instruments ADS1255 and ADS1256 SPI bus based ADCs with the Raspberry Pi
url = https://github.com/ul-gh/PiPyADC
author = Ulrich Lukas
maintainer = Ulrich Lukas
maintainer_email = ul-gh@datenparkplatz.de
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    Operating System :: POSIX :: Linux

[options]
python_requires =
    >= 3
setup_requires =
    versioneer-518
    setuptools >= 38.3.0
install_requires = 
    pigpio
packages = find:


[versioneer]
VCS = git
style = pep440
versionfile_source = pipyadc/_version.py
versionfile_build = pipyadc/_version.py
tag_prefix =
parentdir_prefix = pipyadc-
